Update changelogs for today's release

--- a/changelogs/3.3.x.md
+++ b/changelogs/3.3.x.md
@@ -25,4 +25,7 @@ Released 2023-03-19
 - **Removed** legacy "edit as string" option from a couple numeric settings, now allowing them to be sliders
 
 **Version 3.3.3 Released 2023-05-21**
-- **Removed** `print` statements from the mod
+- **Added** in-game changelogs under `Options > Mod options > Switcheroo > View Switcheroo changelog`
+- **Added** in-game option presets under `Customize > Custom rules > Mod options > Switcheroo > Use a preset`
+- **Removed** `print` statements from the mod (though this should have no effect on packaged gameplay)
+- **Reorganized** the mod custom rules menu to present fewer options at once
