--- a/changelogs/3.4.x.md
+++ b/changelogs/3.4.x.md
@@ -1,5 +1,7 @@
-# **Version 3.4.0**
+# **Versions 3.4.x**
 >## **2024-05-23**
+>3.4.0
+
 
 - **Added** compatibility with Spell Crafting:
   - Combo spells are in the default item pool with the same weight as the less likely of the two component spells (for example, Star Shower is as likely to show up as Transmute, Earthen Shield is as likely as Earth, and Echoed Pulse as likely as Pulse).
